fix: transparentish rename `input` wrapper cause txt behind to be visible

--- a/extension/css/index.css
+++ b/extension/css/index.css
@@ -42,7 +42,7 @@ html.light {
   --surface-h: 0;
   --surface-s: 0%;
   --surface-l: 85%;
-  --surface-hsl: hsl(var(--accent-h) var(--surface-s) var(--surface-l));
+  --surface-hsl: hsl(var(--surface-h) var(--surface-s) var(--surface-l));
   --c-accent: hsl(var(--accent-hsl));
   --c-accent-light: hsl(var(--accent-h), calc(var(--accent-s) / 2), calc(var(--accent-l) * 1.3));
   --c-on-accent: hsl(var(--accent-h), var(--accent-s), calc(var(--accent-l) * 1.5));
@@ -317,8 +317,9 @@ nav[aria-label="Chat history"] li .group a[href^="/c/"] .bg-gradient-to-l {
 nav[aria-label="Chat history"] li .group .bg-token-surface-tertiary {
   padding: var(--p-sidebar-nav-a) !important;
   color: var(--c-txt) !important;
+  background-color: var(--c-surface-3) !important;
+  border: 1px solid var(--c-border) !important;
   border-radius: var(--border-radius-nav-a) !important;
-  background-color: hsl(var(--accent-hsl) / .2) !important;
   left: 0 !important;
   right: 0 !important;
 }
